src-tauri/tests/snapshots/stream_bridge_elicitation__form_user_input_replays_alongside_message_stream.snap
---
source: tests/stream_bridge_elicitation.rs
expression: snapshot
---
line_count: 5
control_events:
  - kind: userInputRequest
    message: Need structured input
    modelId: opus-1m
    payload:
      kind: form
      schema:
        properties:
          approved:
            title: Approved
            type: boolean
          name:
            title: Project name
            type: string
        required:
          - name
          - approved
        type: object
    permissionMode: ~
    provider: claude
    resolvedModel: claude-opus-4-20250514
    sessionId: provider-session-1
    source: design-server
    userInputId: user-input-form-1
    workingDirectory: /tmp/codewit
final_messages:
  - role: assistant
    id: msg-1
    content_length: 2
    content:
      - type: text
        text: Before user input.
      - type: text
        text: After user input.
    status:
      type: complete
      reason: stop
    streaming: ~
dropped_event_types: []
